<resources>
    <string name="app_name">Easy Market</string>
    <string name="tUser">Nome de Usuario:</string>
    <string name="tPass">Senha:</string>
    <string name="tLogin">Logar</string>
    <string name="tRegister">Cadastrar</string>
    <string name="tName">Nome Completo:</string>
    <string name="tEmail">Endereço de Email:</string>
    <string name="tPhone">Telefone:</string>
    <string name="tConfPass">Confirmar Senha:</string>
    <string name="title_activity_initial">Initial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_principal">Principal</string>
    <string name="produtos">Produtos</string>
    <string name="name">Name</string>
    <string name="salvar">Salvar</string>
    <string name="digite_o_nome_da_lista">Digite o nome da Lista</string>
    <string name="title_activity_main">MainActivity</string>
</resources>
