<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/colorSecundary"
    tools:context=".Register">

    <LinearLayout
        android:id="@+id/layout_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_bg"
        android:orientation="vertical"
        android:padding="18dp">

        <LinearLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tName"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/eName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tEmail"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/eMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tPhone"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tUserC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tUser"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/eUserC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tPassC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tPass"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ePassC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tConfPassC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tConfPass"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/eConfPassC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:background="@color/colorAccent"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/bRegisterC"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@color/colorPrimary"
            android:text="@string/tRegister"
            android:textColor="@color/colorSecundary" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>