<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tUser"
                android:textColor="@color/colorSecundary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/eUser"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tPass"
                android:textColor="@color/colorSecundary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ePass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/bLogin"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:background="@color/colorSecundary"
            android:text="@string/tLogin"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bRegister"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/tRegister"
            android:textColor="@color/colorSecundary"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>